# Microseismic_with_DETR-pub

./: README.md  environment.yml  install_env.sh  pyproject.toml
MicroseismicDETR/: dataset.py  engine.py  main.py  matcher.py  model.py  utils.py
notebooks/: test_network.ipynb
scripts/: train_network.sh
